--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "rails-erb-loader": "^5.5.0",
     "rails-ujs": "^5.2.1",
     "stimulus": "^1.1.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "tailwindcss": "^0.6.5"
   },
   "devDependencies": {
-    "tailwindcss": "^0.6.5",
     "webpack-dev-server": "2.11.2"
   }
 }
