--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "tailwindcss": "^0.6.5"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": ">=3.1.11"
   }
 }
