--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "rails-erb-loader": "^5.5.0",
     "rails-ujs": "^5.2.1",
     "stimulus": "^1.1.0",
-    "turbolinks": "^5.2.0",
-    "tailwindcss": "^0.6.5"
+    "tailwindcss": "^0.6.5",
+    "turbolinks": "^5.2.0"
   },
   "devDependencies": {
     "webpack-dev-server": ">=3.1.11"
